[workspace]
members = ["fish-demo-more-fishies"]

[workspace.dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "a6ecb3e52d" }

[package]
name = "fish_demo"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true

[[bin]]
name = "client_fish_demo"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_fish_demo"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]